greenpath/src/RenderPage.css
.left-half {
    height: 100vh;
    background: #2D2D2D;
}

.right-half {
    height: 100vh;
    background-image: url('./images/BUS.png');
    background-size: cover;
    overflow: scroll;
    background-position: center bottom;
}

.row.no-pad {
    margin-right: 0;
    margin-left: 0;
}

.row.no-pad>[class*='col-'] {
    padding-right: 0;
    padding-left: 0;
}

.landing-title-left-wrapper,
.landing-title-right-wrapper {
    padding-top: 20%;
}

.landing-title-left,
.landing-title-right {
    font-size: 500%;
    font-family: 'Source Sans Pro';
    font-weight: 900;
}

.landing-title-left {
    text-align: right;
    color: #FFFFFF;
}

.landing-title-right-wrapper {
    text-align: left;
    color: #000000;
}

.landing-body-wrapper {
    padding-top: 10%;
    padding-left: 10%;
    padding-right: 30%;
}

.landing-subtitle {
    font-size: 300%;
    color: #FFFFFF;
    font-weight: 600;
}

.landing-text {
    font-size: 130%;
    color: #FFFFFF;
    font-weight: 500;
}

.landing-button-wrapper {
    padding-top: 10px;
}

.landing-button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    position: static;
    width: 200px;
    height: 60px;
    left: 0px;
    top: 0px;

    background: #81B5A9;
    border-radius: 16.4167px;
    border-width: 0px;

    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;
}

.landing-button-text {
    font-family: 'Source Sans Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
    color: rgba(255, 255, 255, 0.97);
}

.bus-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    position: absolute;
    /*position: absolute;*/
    /*clip: rect(0, 500px, 1000px, 0);*/
}

.back_button {
    position: absolute;
    left: 20px;
    top: 20px;
    border: none;
    background-color: white;
    font-size: 40px;
    color: #a3a3a3;
}

.start_trip {
    font-family: 'Source Sans Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 130.7%;
    /* or 52px */

    color: #000000;
}

.title_wrapper {
    position: relative;
    width: auto;
    height: auto;
    margin: 13px;
}

.search_wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 24px;

    position: absolute;
    width: 445px;
    height: auto;
    max-height: 70vh;
    left: 70px;
    top: 158px;

    overflow-y: auto;
    overflow-x: hidden;

    background: rgba(255, 255, 255, 0.97);
    /* Box Shadows/Small */

    box-shadow: 0px 11px 20px rgba(5, 16, 55, 0.1);
    border-radius: 20px;
}

.GetRoutes {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 24px;
}

